releases/ambassador-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ambassador-system
  name: ambassador-system
