releases/ambassador-system/test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tour
spec:
  ports:
    - name: ui
      port: 5000
      targetPort: 5000
    - name: backend
      port: 8080
      targetPort: 8080
  selector:
    app: tour
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tour
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tour
    spec:
      containers:
        - name: tour-ui
          image: quay.io/datawire/tour:ui-0.2.6
          ports:
            - name: http
              containerPort: 5000
        - name: quote
          image: quay.io/datawire/tour:backend-0.2.6
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "0.1"
              memory: 100Mi
